# samwise-flight-software

./: .bazelrc  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  TESTING.md  build_debug.sh  build_pico.sh  build_tests.sh  build_upload.sh  c_cpp_properties.json  configure.sh  format_all.sh  install.sh  package-lock.json  package.json  run_tests.sh  tmp.txt
boards/: BUILD.bazel  samwise_pico.h  samwise_picubed.h
bzl/: BUILD.bazel  bin_aspect.bzl  defs.bzl  firmware_for_test.bzl  gen_hw_tests_header.py  hw_test_types.h  payload_radio_deps.bzl
ground_station/: .gitignore  CONTRIBUTING.md  README.md  __init__.py  cli.py  code.py  config.py  logger.py  models.py  protocol.py  pyproject.toml  radio_commands.py  radio_initialization.py  requirements.txt  samwise.ksy  server.py  setup-dev.sh  state.py  test_compatibility.py  ui.py
ground_station/2400/: README.md  main.py  setup.py  setup.sh
ground_station/2400 GS/RPi GS/: main.py  setup.sh
ground_station/2400/radio/: CMakeLists.txt  Lora_rx.cpp  Lora_tx.cpp
ground_station/433 GS/: code.py  requirements.txt
ground_station/433 GS/lib/: circuitpython_hmac.mpy
ground_station/gs/: __init__.py  comms.py  config.py  logger.py  models.py  protocol.py  radio_commands.py  radio_initialization.py  state.py  ui.py
ground_station/lib/: adafruit_logging.mpy  adafruit_rfm9x.mpy
ground_station/lib/adafruit_hashlib/: __init__.mpy
ground_station/static/: index.html
ground_station/tests/: conftest.py  test_compatibility.py  test_filtering.py  test_protocol.py  test_server.py
ground_station/tests/test_data/: BUILD.bazel  beacon_packet.hex
lib/littlefs-SSI/: BUILD.bazel  CMakeLists.txt  README.md  lfs.c  lfs.h
lib/littlefs-SSI/bd/: lfs_emubd.c  lfs_emubd.h
lib/littlefs-SSI/benches/: bench_dir.toml  bench_superblock.toml
lib/littlefs-SSI/runners/: bench_runner.h  test_runner.c  test_runner.h
lib/littlefs-SSI/scripts/: changeprefix.py  plot.py  plotmpl.py  stack.py  tracebd.py  watch.py
lib/littlefs-SSI/tests/: test_badblocks.toml  test_bd.toml  test_dirs.toml  test_exhaustion.toml  test_interspersed.toml  test_orphans.toml  test_relocations.toml  test_shrink.toml  test_truncate.toml
lib/tinycrypt/: AUTHORS  BUILD.bazel  CMakeLists.txt  Makefile  README
lib/tinycrypt/tests/: test_ccm_mode.c  test_cmac_mode.c  test_ctr_prng.c  test_ecc_dh.c  test_ecc_dsa.c  test_ecc_utils.c  test_hmac.c  test_sha256.c
ota-test/: CMakeLists.txt  bootloader.c  bootloader.ld  partition_a.c  partition_a.ld  partition_b.c  partition_b.ld
ota_mvp/: BUILD.bazel  CMakeLists.txt  README.md  blink.uf2  deprecated_BUILD  main-deprecated.c  main.c  partition_b.h  pt.json  pt.uf2  static.uf2
ota_mvp/test/: inject.c  payload.c  quine-gen  quine-gen.c
payload/radio/: BUILD.bazel  CMakeLists.txt  Lora_rx.cpp  Lora_tx.cpp  Lora_tx_packets.cpp  README.md  SX128x_Linux.cpp  SX128x_Linux.hpp  Test.cpp  lora_config.cpp  lora_config.hpp
src/: '  CMakeCache.txt  CMakeLists.txt  README.md  bit-support.h  error.c  init.c  init.h  macros.h  main.c  main.h  pins.h  queue.h  slate.h  testbase.c  testbase.h
src/command_parser/: CMakeLists.txt  command_parser.c  command_parser.h
src/common/: BUILD.bazel  CMakeLists.txt  adcs_packet.h  bit-support.h  config.h  error.c  error.h  macros.h  pins.h  radio_packet.h  slate.h  sleep.h  state_machine.h  typedefs.h  utils.h
src/common/error/: CMakeLists.txt  error.h
src/drivers/: CMakeLists.txt  adm1176.c  adm1176.h  drivers-tasklist.md  flash.c  flash.h  gps.c  neopixel.c  neopixel.h  payload_uart.c  payload_uart.h  rfm9x.c  rfm9x.h
src/drivers/adcs/: BUILD.bazel  CMakeLists.txt  adcs_driver.c  adcs_driver.h  adcs_driver_mock.c
src/drivers/adm1176/: BUILD.bazel  CMakeLists.txt  adm1176.c  adm1176.h  adm1176_mock.c
src/drivers/burn_wire/: BUILD.bazel  CMakeLists.txt  burn_wire.c  burn_wire.h  burn_wire_mock.c
src/drivers/device_status/: BUILD.bazel  CMakeLists.txt  device_status.c  device_status.h  device_status_mock.c
src/drivers/fixed_solar/: CMakeLists.txt  fixed_solar.c  fixed_solar.h
src/drivers/flash/: BUILD.bazel  CMakeLists.txt  flash.c  (+2 more)
src/error/: BUILD.bazel  CMakeLists.txt  error.c  error.h  error_mock.c
src/filesys/: BUILD.bazel  CMakeLists.txt  README.md  filesys.c  filesys.h  lfs_gen_flash_wrapper.c  lfs_gen_flash_wrapper.h  lfs_mram_wrapper.c  lfs_mram_wrapper.h
src/flash/: flash.c  flash.h
src/hal/: CMakeLists.txt  hal_interface.h  hal_mock.c  hal_pico.c
src/init/: BUILD.bazel  CMakeLists.txt  init.c  init.h
src/logger/: logger.c  logger.h
src/mock_pico/: CMakeLists.txt  mock_pico.c  mock_pico.h
src/packet/: BUILD.bazel  CMakeLists.txt  adcs_packet.h  packet.c  packet.h
src/protocols/: CMakeLists.txt  file_transfer.c  file_transfer.h
src/scheduler/: BUILD.bazel  CMakeLists.txt  scheduler.c  scheduler.h  state_ids.h  state_machine.h  state_mock.c  state_registry.c  state_registry.h  states.h
src/slate/: BUILD.bazel  CMakeLists.txt  packet.h  slate.c  slate.h
src/state_machine/: ADDING_STATES_AND_TASKS.md  state_machine.c  state_machine.h  state_machine_states.h
src/states/: CMakeLists.txt  README.md
src/tasks/: CMakeLists.txt  README.md  TEMPLATE.txt  blink_task.c  blink_task.h  print_task.c  print_task.h  template_task.c  template_task.h
src/test_infrastructure/: BUILD.bazel  CMakeLists.txt  README.md  hardware_test_assert.h  test_harness.c  test_harness.h  test_scheduler_helpers.c  test_scheduler_helpers.h
src/test_mocks/: BUILD.bazel  CMakeLists.txt  bringup_state.h  burn_wire_reset_state.h  burn_wire_state.h  driver_stubs.c  error.c  error.h  error_mock.c  init_state.h  logger.c  logger.h  logger_mock.c  macros.h  macros_mock.h  mram.c  mram.h  neopixel.c  neopixel_mock.c  neopixel_mock.h  running_state.h  scheduler.h  slate.h  slate_mock.h  state_machine.h  state_machine_mock.h  states.h  typedefs.h
src/util/: pool.c  pool.h  queue.c  queue.h  sized_buffer.h
src/utils/: BUILD.bazel  CMakeLists.txt  buffer_utils.h  crc32.h  memcpy_inc.h  safe_sleep.h  sleep.h  str_utils.h
(+557 files in other folders)
